@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <wxsmith>
 	<object class="wxDialog" name="editelevator">
 		<title>Elevator Parameters</title>
@@ -415,7 +415,7 @@
 										<object class="wxButton" name="ID_bSetDoorTimer" variable="bSetDoorTimer" member="yes">
 											<label>Set</label>
 											<style>wxBU_EXACTFIT</style>
-											<handler function="On_bDoorTimer_Click" entry="EVT_BUTTON" />
+											<handler function="On_bSetDoorTimer_Click" entry="EVT_BUTTON" />
 										</object>
 										<flag>wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
 										<border>5</border>
@@ -866,7 +866,7 @@
 										<object class="wxStaticText" name="ID_STATICTEXT30" variable="StaticText30" member="yes">
 											<label>Floor:</label>
 										</object>
-										<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+										<flag>wxALIGN_LEFT|wxALIGN_TOP</flag>
 									</object>
 									<object class="sizeritem">
 										<object class="wxTextCtrl" name="ID_txtDestFloor" variable="txtDestFloor" member="yes">
@@ -877,10 +877,27 @@
 										<border>5</border>
 									</object>
 									<object class="sizeritem">
+										<object class="wxStaticText" name="ID_STATICTEXT43" variable="StaticText43" member="yes">
+											<label>IsMoving:</label>
+										</object>
+										<flag>wxALIGN_LEFT|wxALIGN_TOP</flag>
+										<border>5</border>
+										<option>1</option>
+									</object>
+									<object class="sizeritem">
+										<object class="wxTextCtrl" name="ID_txtIsMoving" variable="txtIsMoving" member="yes">
+											<size>75,-1</size>
+											<style>wxTE_READONLY</style>
+										</object>
+										<flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+										<border>5</border>
+										<option>1</option>
+									</object>
+									<object class="sizeritem">
 										<object class="wxStaticText" name="ID_STATICTEXT31" variable="StaticText31" member="yes">
 											<label>Move:</label>
 										</object>
-										<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+										<flag>wxALIGN_LEFT|wxALIGN_TOP</flag>
 									</object>
 									<object class="sizeritem">
 										<object class="wxTextCtrl" name="ID_txtMoveElevator" variable="txtMoveElevator" member="yes">
@@ -894,7 +911,7 @@
 										<object class="wxStaticText" name="ID_STATICTEXT32" variable="StaticText32" member="yes">
 											<label>MoveFlr:</label>
 										</object>
-										<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+										<flag>wxALIGN_LEFT|wxALIGN_TOP</flag>
 									</object>
 									<object class="sizeritem">
 										<object class="wxTextCtrl" name="ID_txtMoveElevatorFloor" variable="txtMoveElevatorFloor" member="yes">
@@ -908,7 +925,7 @@
 										<object class="wxStaticText" name="ID_STATICTEXT33" variable="StaticText33" member="yes">
 											<label>Distance:</label>
 										</object>
-										<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+										<flag>wxALIGN_LEFT|wxALIGN_TOP</flag>
 									</object>
 									<object class="sizeritem">
 										<object class="wxTextCtrl" name="ID_txtDistance" variable="txtDistance" member="yes">
@@ -922,7 +939,7 @@
 										<object class="wxStaticText" name="ID_STATICTEXT34" variable="StaticText34" member="yes">
 											<label>Dest:</label>
 										</object>
-										<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+										<flag>wxALIGN_LEFT|wxALIGN_TOP</flag>
 									</object>
 									<object class="sizeritem">
 										<object class="wxTextCtrl" name="ID_txtDestination" variable="txtDestination" member="yes">
@@ -936,7 +953,7 @@
 										<object class="wxStaticText" name="ID_STATICTEXT35" variable="StaticText35" member="yes">
 											<label>StopDist:</label>
 										</object>
-										<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+										<flag>wxALIGN_LEFT|wxALIGN_TOP</flag>
 									</object>
 									<object class="sizeritem">
 										<object class="wxTextCtrl" name="ID_txtStopDistance" variable="txtStopDistance" member="yes">
@@ -950,7 +967,7 @@
 										<object class="wxStaticText" name="ID_STATICTEXT36" variable="StaticText36" member="yes">
 											<label>TmpDecel:</label>
 										</object>
-										<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+										<flag>wxALIGN_LEFT|wxALIGN_TOP</flag>
 									</object>
 									<object class="sizeritem">
 										<object class="wxTextCtrl" name="ID_txtTempDecel" variable="txtTempDecel" member="yes">
@@ -964,7 +981,7 @@
 										<object class="wxStaticText" name="ID_STATICTEXT37" variable="StaticText37" member="yes">
 											<label>Error:</label>
 										</object>
-										<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+										<flag>wxALIGN_LEFT|wxALIGN_TOP</flag>
 									</object>
 									<object class="sizeritem">
 										<object class="wxTextCtrl" name="ID_txtErrorOffset" variable="txtErrorOffset" member="yes">
