@@ -8,6 +8,8 @@ Version 1.3 (2.0 Alpha 3)
 -fixed up sign generator script
 -new floor signs (floors 151 to 300, and floors CC and PL for the Sears Tower)
 -fixed sound code
+-added script parameters for specifying elevator sounds
+-fixed door sound location and movement
 
 Version 1.2 (2.0 Alpha 2) - Jan 10, 2009
 -------------------------
